--- a/Proyecto ML TC2006.ipynb
+++ b/Proyecto ML TC2006.ipynb
@@ -6050,11 +6050,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 257,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-21T21:18:37.929497Z",
-     "start_time": "2020-11-21T21:18:31.595361Z"
+     "end_time": "2020-11-21T21:27:09.242200Z",
+     "start_time": "2020-11-21T21:27:03.074453Z"
     }
    },
    "outputs": [],
@@ -6149,9 +6149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hasta aquí, repetimos el mismo proceso de FE. Ahora simplemente resta hacer un join con los diccionarios para las variables. \n",
-    "\n",
-    "NO JALA EL JOIN:("
+    "Hasta aquí, repetimos el mismo proceso de FE. Ahora simplemente resta hacer un join con los diccionarios para las variables. "
    ]
   },
   {
@@ -6163,6 +6161,7 @@
     }
    },
    "source": [
+    "# NO JALA EL JOIN:(\n",
     "dfSECTOR = pd.read_excel('./dataset/diccionario_datos_covid19/Catalogos_071020.xlsx', sheet_name='Catálogo SECTOR')\n",
     "eda=pd.merge(eda,dfSECTOR, how='inner', on=['SECTOR', 'CLAVE', ])\n",
     "eda"
@@ -6170,11 +6169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 258,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-21T21:18:48.096508Z",
-     "start_time": "2020-11-21T21:18:44.425479Z"
+     "end_time": "2020-11-21T21:27:42.343278Z",
+     "start_time": "2020-11-21T21:27:38.388011Z"
     }
    },
    "outputs": [
@@ -6235,7 +6234,7 @@
        "      <th>0</th>\n",
        "      <td>FUERA DE USMER</td>\n",
        "      <td>IMSS</td>\n",
-       "      <td>CIUDAD DE MÉXICO</td>\n",
+       "      <td>CIUDAD DE MEXICO</td>\n",
        "      <td>HOMBRE</td>\n",
        "      <td>HOSPITALIZADO</td>\n",
        "      <td>2020-03-26</td>\n",
@@ -6267,7 +6266,7 @@
        "      <th>1</th>\n",
        "      <td>USMER</td>\n",
        "      <td>IMSS</td>\n",
-       "      <td>MÉXICO</td>\n",
+       "      <td>MEXICO</td>\n",
        "      <td>HOMBRE</td>\n",
        "      <td>HOSPITALIZADO</td>\n",
        "      <td>2020-03-28</td>\n",
@@ -6299,7 +6298,7 @@
        "      <th>2</th>\n",
        "      <td>USMER</td>\n",
        "      <td>SSA</td>\n",
-       "      <td>MÉXICO</td>\n",
+       "      <td>MEXICO</td>\n",
        "      <td>MUJER</td>\n",
        "      <td>AMBULATORIO</td>\n",
        "      <td>2020-03-31</td>\n",
@@ -6363,7 +6362,7 @@
        "      <th>4</th>\n",
        "      <td>USMER</td>\n",
        "      <td>SSA</td>\n",
-       "      <td>CIUDAD DE MÉXICO</td>\n",
+       "      <td>CIUDAD DE MEXICO</td>\n",
        "      <td>HOMBRE</td>\n",
        "      <td>AMBULATORIO</td>\n",
        "      <td>2020-03-29</td>\n",
@@ -6427,7 +6426,7 @@
        "      <th>849853</th>\n",
        "      <td>FUERA DE USMER</td>\n",
        "      <td>IMSS</td>\n",
-       "      <td>CIUDAD DE MÉXICO</td>\n",
+       "      <td>CIUDAD DE MEXICO</td>\n",
        "      <td>HOMBRE</td>\n",
        "      <td>HOSPITALIZADO</td>\n",
        "      <td>2020-10-13</td>\n",
@@ -6491,7 +6490,7 @@
        "      <th>849867</th>\n",
        "      <td>USMER</td>\n",
        "      <td>ESTATAL</td>\n",
-       "      <td>MÉXICO</td>\n",
+       "      <td>MEXICO</td>\n",
        "      <td>HOMBRE</td>\n",
        "      <td>HOSPITALIZADO</td>\n",
        "      <td>2020-10-15</td>\n",
@@ -6590,15 +6589,15 @@
       ],
       "text/plain": [
        "                ORIGEN   SECTOR           ENTIDAD_UM    SEXO  TIPO_PACIENTE  \\\n",
-       "0       FUERA DE USMER     IMSS     CIUDAD DE MÉXICO  HOMBRE  HOSPITALIZADO   \n",
-       "1                USMER     IMSS               MÉXICO  HOMBRE  HOSPITALIZADO   \n",
-       "2                USMER      SSA               MÉXICO   MUJER    AMBULATORIO   \n",
+       "0       FUERA DE USMER     IMSS     CIUDAD DE MEXICO  HOMBRE  HOSPITALIZADO   \n",
+       "1                USMER     IMSS               MEXICO  HOMBRE  HOSPITALIZADO   \n",
+       "2                USMER      SSA               MEXICO   MUJER    AMBULATORIO   \n",
        "3                USMER     IMSS  BAJA CALIFORNIA SUR  HOMBRE    AMBULATORIO   \n",
-       "4                USMER      SSA     CIUDAD DE MÉXICO  HOMBRE    AMBULATORIO   \n",
+       "4                USMER      SSA     CIUDAD DE MEXICO  HOMBRE    AMBULATORIO   \n",
        "...                ...      ...                  ...     ...            ...   \n",
-       "849853  FUERA DE USMER     IMSS     CIUDAD DE MÉXICO  HOMBRE  HOSPITALIZADO   \n",
+       "849853  FUERA DE USMER     IMSS     CIUDAD DE MEXICO  HOMBRE  HOSPITALIZADO   \n",
        "849864           USMER     IMSS       AGUASCALIENTES   MUJER  HOSPITALIZADO   \n",
-       "849867           USMER  ESTATAL               MÉXICO  HOMBRE  HOSPITALIZADO   \n",
+       "849867           USMER  ESTATAL               MEXICO  HOMBRE  HOSPITALIZADO   \n",
        "849868           USMER     IMSS            CHIHUAHUA  HOMBRE  HOSPITALIZADO   \n",
        "849872  FUERA DE USMER      SSA      SAN LUIS POTOSÍ  HOMBRE  HOSPITALIZADO   \n",
        "\n",
@@ -6670,7 +6669,7 @@
        "[741499 rows x 29 columns]"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6683,8 +6682,8 @@
     "                                             11: 'SEMAR', 12:'SSA', 13:'UNIVERSITARIO'}, \n",
     "                         \"ENTIDAD_UM\":      { 1: 'AGUASCALIENTES', 2: 'BAJA CALIFORNIA', 3: 'BAJA CALIFORNIA SUR', \n",
     "                                              4: 'CAMPECHE', 5: 'COAHUILA', 6: 'COLIMA', 7: 'CHIAPAS', 8: 'CHIHUAHUA',\n",
-    "                                              9: 'CIUDAD DE MÉXICO', 10: 'DURANGO', 11: 'GUANAJUATO', 12: 'GUERRERO', \n",
-    "                                             13: 'HIDALGO', 14: 'JALISCO', 15: 'MÉXICO', 16: 'MICHOACÁN', 17: 'MORELOS',\n",
+    "                                              9: 'CIUDAD DE MEXICO', 10: 'DURANGO', 11: 'GUANAJUATO', 12: 'GUERRERO', \n",
+    "                                             13: 'HIDALGO', 14: 'JALISCO', 15: 'MEXICO', 16: 'MICHOACÁN', 17: 'MORELOS',\n",
     "                                             18: 'NAYARIT', 19: 'NUEVO LEÓN', 20: 'OAXACA', 21: 'PUEBLA', 22: 'QUERÉTARO', \n",
     "                                             23: 'QUINTANA ROO', 24: 'SAN LUIS POTOSÍ', 25: 'SINALOA', 26: 'SONORA', \n",
     "                                             27: 'TABASCO', 28: 'TAMAULIPAS', 29: 'TLAXCALA',30: 'VERACRUZ',31: 'YUCATÁN', \n",
@@ -6713,11 +6712,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-21T21:19:11.324412Z",
-     "start_time": "2020-11-21T21:18:57.628621Z"
+     "start_time": "2020-11-21T21:42:44.095Z"
     }
    },
    "outputs": [],
@@ -6736,27 +6734,6 @@
    "source": [
     "### Gráficas ..."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
